@@ -5,6 +5,7 @@ Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Christian Perrier <bubulle@debian.org>
 Build-Depends-Indep: debhelper (>= 4.1.13), dpkg-dev (>= 1.9), iso-codes (>= 0.21-1), dash | ash, po-debconf
 Standards-Version: 3.6.1.0
+Pre-Depends: iso-3166-udeb
 
 Package: countrychooser
 Architecture: all
