@@ -42,10 +42,10 @@ install: build
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
-	# The following while iso-3166-udeb doesn't exist
-	# Should become useless when we will have it
-	install -m644 /usr/share/iso-codes/iso_3166.tab debian/$(PACKAGE)/etc/iso_3166.tab
-	# The following while we have no ther way to get SUPPORTED
+	# The following was while iso-3166-udeb doesn't exist
+	# Not needed anymore
+	# install -m644 /usr/share/iso-codes/iso_3166.tab debian/$(PACKAGE)/etc/iso_3166.tab
+	# The following while we have no other way to get SUPPORTED
 	# Should become useless when we will have it
 	install -m644 debian/SUPPORTED-short debian/$(PACKAGE)/etc/SUPPORTED-short
 
